<resources>
    <string name="app_name">Word Quest</string>
    <string name="btnPlayText">Play</string>
    <string name="btnHowToPlayText">How to play</string>
    <string name="btnExitText">Exit to main menu</string>
    <string name="contentDescImageTChest">Treasure chest logo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="txtInputHint">Guess the letter or word</string>
    <string name="lorem_ipsum">lorem</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="Enter">Enter</string>
    <string name="alreadyGuessedLettersText">Already guessed letters: </string>
    <string name="alreadyGuessedWordsText">Already guessed words: </string>
    <string name="btnPlayAgain">Play again</string>
    <string name="youWin">YOU WIN</string>
    <string name="youLose">YOU LOSE</string>
    <string name="btnBuy">BUY</string>
    <string name="btnApply">APPLY</string>
    <string name="default_ship">Default ship</string>
    <string name="default_boat_desc">Default boat</string>
    <string name="apply">APPLY</string>
    <string name="button_back">button back</string>
    <string name="icon_coin">icon coin</string>
    <string name="shop_default_skin">shop default skin</string>
    <string name="sailboat_shop_title">Sailboat 500$</string>
    <string name="shop_fisherman_skin">shop fisherman skin</string>
    <string name="shop_fisherman_title_price">Fisherman 500$</string>
    <string name="play_again">Play again</string>
    <string name="exit_to_main_menu">Main menu</string>
    <string name="pirate_crew_1000">Pirate crew 1000$</string>
    <string name="dragon_squad_1000">Dragon squad 1000$</string>
    <string name="thousand_sunny_1000000">Thousand Sunny 1000000$</string>
</resources>