<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ShopActivity">

    <TextView
        android:id="@+id/textViewGold"
        android:layout_width="53dp"
        android:layout_height="28dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/btnBack"
        android:contentDescription="@string/button_back"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_back_96"
        tools:srcCompat="@drawable/icons8_back_96" />

    <ImageView
        android:id="@+id/imageView8"
        android:contentDescription="@string/icon_coin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:srcCompat="@drawable/icons8_coin_64" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bgColor"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/default_boat_desc"
                        app:srcCompat="@drawable/default_ship" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:text="@string/default_ship"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/a"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/btnApply"
                            android:text="@string/apply"
                            android:textColor="@color/black"
                            app:strokeWidth="3.5dp" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bgColor"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView91"
                        android:contentDescription="@string/shop_default_skin"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/lol" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:text="@string/sailboat_shop_title"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnBuyLol"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/btnBuy"
                            android:text="@string/btnBuy"
                            android:textColor="@color/black"
                            android:visibility="visible"
                            app:strokeWidth="3.5dp" />

                        <Button
                            android:id="@+id/btnApplyLol"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/btnApply"
                            android:text="@string/apply"
                            android:textColor="@color/black"
                            android:visibility="gone"
                            app:strokeWidth="3.5dp" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bgColor"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView92"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/fisherman"
                        tools:srcCompat="@drawable/fisherman"
                        android:contentDescription="@string/shop_fisherman_skin"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/shop_fisherman_title_price"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnBuyFisherman"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/btnBuy"
                            android:text="@string/btnBuy"
                            android:textColor="@color/black"
                            app:strokeWidth="3.5dp" />

                        <Button
                            android:id="@+id/btnApplyFisherman"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/btnApply"
                            android:text="@string/apply"
                            android:textColor="@color/black"
                            android:visibility="gone"
                            app:strokeWidth="3.5dp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:srcCompat="@drawable/icons8_treasure_64"
        android:contentDescription="@string/contentDescImageTChest"/>

</androidx.constraintlayout.widget.ConstraintLayout>