<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="203dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/contentDescImageTChest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/treasurechest"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/treasurechest" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="385dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cropped" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="serif"
        android:text="@string/btnPlayText"
        android:textColor="@color/btnTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHowToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="serif"
        android:text="@string/btnHowToPlayText"
        android:textColor="@color/btnTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="serif"
        android:text="@string/btnExitText"
        android:textColor="@color/btnTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="338dp"
        android:layout_height="110dp"
        android:contentDescription="@string/contentDescImageTChest"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/wordquesttitle__3_" />


</androidx.constraintlayout.widget.ConstraintLayout>