<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorGame"
    tools:context=".game_activity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/alreadyGuessedWordsText"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/alreadyGuessedWords"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alreadyGuessedLetters"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/txtBoxWordToBeGuessed"
        android:layout_width="367dp"
        android:layout_height="87dp"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="367dp"
        android:layout_height="98dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxWordToBeGuessed"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="91dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentDescImageTChest"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/kisspng_piracy_drawing_party_coloring_book_boat_pirate_5ab5efebb72bc0_2784802715218728757503" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginStart="185dp"
            android:contentDescription="@string/contentDescImageTChest"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/treasurechest" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtBoxGuess"
        android:layout_width="367dp"
        android:layout_height="61dp"
        android:hint="@string/txtInputHint"
        android:imeOptions="actionSend"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/alreadyGuessedLettersText"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxGuess"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/alreadyGuessedLetters"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxGuess"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>